--- a/group.html
+++ b/group.html
@@ -21,7 +21,7 @@
  <li><a href="index.html">Home</a></li>
  <li><a href="pubs.html">Publications</a></li>
  <li><a href="index.html#teaching">Teaching</a></li>
- <li><a href="index.html#group">Group</a></li>
+ <li><a href="group.html">Group</a></li>
  <!-- <li><a href="software.html">Software</a></li> -->
  <li><a href="files/Saakur_CV.pdf">CV</a></li>
 </ul>
@@ -29,9 +29,10 @@
 </header>
 
 <!-- Affiliations + Contact -->
+
 <section>
-<center><img src="./files/Lab_Logo.png" align="center" width=500 alt="me"/></center>
-<!-- <h1> Computer Vision and Understanding Lab </h1> -->
+<!-- <center><img src="./files/Lab_Logo.png" align="center" width=500 alt="me"/></center> -->
+<h1> Open ended Reasoning and Knowledge Acquisition (ORCA) Lab </h1>
 </section>
 
 <section>
@@ -70,18 +71,6 @@
     </p>
   </div>
 
-<!-- 	
-   <div class="person">
-    <img src="./files/GideonAdele.jpg" alt="thumb" />
-    <p>
-      <a href="#">Gideon Adele</a>
-      <br />
-      Ph.D. Student <br/>
-      (Spring 2022 - Present)
-    </p>
-  </div>
-	 -->
- 
  <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
@@ -110,70 +99,20 @@
   <center>
 <h1 id="people">Alumni</h1>
 </center>
-<br>
-<div class="people">
-  <div class="person">
-    <img src="./files/nikhil.jpg" alt="thumb" />
-    <p>
-      <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>
-      <br />
-      Master's Student (BA&DS) <br/>
-      (Fall 2019 - Spring 2021) <br/>
-      First Job: Data Scientist, Concat Systems.
-    </p>
-  </div>
-	
-  <div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
-    <p>
-      <a href="#">Makenzie Terrell</a>
-      <br />
-      B.S. (CS) Student <br/>
-      (Fall 2020 - Fall 2021)
-    </p>
-  </div>  
-<div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>
-      <br />
-      M.S. (CS) Student <br/>
-      (Fall 2020 - Fall 2021) <br/>
-      First Job: SDE, Amazon.
-    </p>
-  </div>
- 
-  <div class="person">
-    <img src="./files/priya.jpeg" alt="thumb" />
-    <p>
-      <a href="#">Priyadharsini Ramamurthy</a>
-      <br />
-      Ph.D. Student <br/>
-      (Fall 2020 - Summer 2023)
-    </p>
-  </div>
+<be>
 
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="#">Devyn Hubbard</a>
-      <br />
-      B.S. (CS) Student <br/>
-      (Spring 2022 - Spring 2023)
-    </p>
-  </div>  
-
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>
-      <br />
-      M.S. (CS) Student <br/>
-      (Fall 2021 - Spring 2022)
-    </p>
-  </div>  
-
-</div>
+<a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
+<a href="#">Makenzie Terrell</a> B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a> M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
+<a href="#">Priyadharsini Ramamurthy</a> Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
+<a href="#">Devyn Hubbard</a> B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a> M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
+<a href="#">Deepthi Mikkilineni</a> M.S. (CS) Student (Fall 2022).  <br/>
+<a href="#">Sriram Madepalli</a> M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
+<a href="#">Swapna Darsi</a> M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
+<a href="#">Ramya Mikkilineni</a> M.S. (CS) Student (Summer 2022). Next: SDE, Samsung <br/>
+<a href="#">Trae Primm</a> REU Student (Summer 2021). <br/>
+<a href="#">Madison Rushing </a> REU Student (Summer 2021). <br/>
 </section>
 
 <section>
