--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
  <li><a href="index.html">Home</a></li>
  <li><a href="pubs.html">Publications</a></li>
  <li><a href="index.html#teaching">Teaching</a></li>
- <li><a href="index.html#group">Group</a></li>
- <!-- <li><a href="software.html">Software</a></li> -->
+ <li><a href="group.html">Group</a></li>
  <li><a href="files/Saakur_CV.pdf">CV</a></li>
 </ul>
 </nav>
@@ -277,50 +276,6 @@ This entails developing approaches that do things such as:
  <li class="packed">Summer 2016: <a href="#">COP 2512: IT Programming Fundamentals</a>. <a href="http://cse.usf.edu"> </a> (USF) </li>
 </ul>
 </section>
-
-<!-- Group -->
-<section>
-<a name="group"></a>
-<h2 style="text-align: center">Group</h2>
-
-<p>
-I lead the <a href="group.html">Computer Vision and Understanding Lab</a>. Here are the current and past members:
-</p>
-
-<h4>Students</h4>
-<ul>
- <li class="packed"><a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a>, PhD student (Spring 2020 &mdash; Present)</li> 
- <li class="packed"><a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>, PhD student (Fall 2020 &mdash; Present)</li> 
- <li class="packed"><a href="#">Shengfang Ma</a>, M.S. student (OSU, Fall 2021 &mdash; Present)</li>
- <li class="packed"><a href="https://www.linkedin.com/in/venkata-vavilthota/">Venkata Ragavendra Vavilthota</a>, M.S. student (OSU, Spring 2023 &mdash; Present)</li>
- <li class="packed"><a href="#">Uddhav Ramachandran</a>, High School Intern, then B.S. C.S. (OSU, Fall 2020 &mdash; Present)</li>
- </ul>
-
-<h4>Past Students</h4>
-<ul>
-<li class="packed"><a href="#">Priyadharsini Ramamurthy</a>, PhD student (OSU, Fall 2020 &mdash; Summer 2023), Then: Ph.D. OSU.</li>
-<li class="packed"><a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a>, M.S. student (Fall 2021 &mdash; Spring 2022). Then: SDE, Amazon</li>
-<li class="packed"><a href="#">Devyn Hubabrd</a>, B.S. student (Spring 2022 &mdash; Spring 2023), Then: B.S. OSU.</li>
-<li class="packed"><a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>, M.S. student (Fall 2020 &mdash; Fall 2021). Then: SDE, Amazon</li> 
-<li class="packed"><a href="#">Makenzie Terrell</a>, B.S. student (Fall 2020 &mdash; Fall 2021), Then: B.S. OSU</li>
-<li class="packed"><a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>, MS student (Fall 2019 &mdash; Spring 2021). Then: Data Scientist, Concat Systems</li> 
- 
- </ul>
-
-<!-- Funding -->
-<section>
-<h2 style="text-align: center">Funding</h2>
-<p>
-Our research is supported by the following:
-</p>
-<ul>
- <li class="packed"> OSU Core Facility Support Program with <a href="https://hpcc.okstate.edu/pratul_agarwal.html"> Pratul Agarwal </a></li>
-  <li class="packed"> USDA NAHLN with <a href="http://nimffab.okstate.edu/faculty-and-staff/akhilesh-ramachandran"> Akhilesh Ramachandran </a> and <a href="https://arunkumar.okstate.edu/"> Arunkumar Bagavathi </a></li>
-  <li class="packed"> National Science Foundation </li>
-</ul>
-
-</section>
-
 
 <!-- Talks -->
 <section>
