--- a/group.html
+++ b/group.html
@@ -32,7 +32,7 @@
 
 <section>
 <!-- <center><img src="./files/Lab_Logo.png" align="center" width=500 alt="me"/></center> -->
-<h1> Open ended Reasoning and Knowledge Acquisition (ORCA) Lab </h1>
+<h1  style="text-align: center;"> Open-ended Reasoning and Knowledge Acquisition (ORCA) Lab </h1>
 </section>
 
 <section>
