--- a/group.html
+++ b/group.html
@@ -80,14 +80,24 @@
       (Fall 2021 - Present)
     </p>
   </div>  
+
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Venkata Ragavendra Vavilthota</a>
+      <br />
+      M.S. (CS) Student <br/>
+      (Fall 2022 - Present)
+    </p>
+  </div>  
 	
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Udhav Ramachandran</a>
       <br />
-      High School Research Intern <br/>
-      (Fall 2020 - Present)
+      B.S. Student <br/>
+      (Fall 2022 - Present)
     </p>
   </div>  
 	
@@ -101,18 +111,19 @@
 </center>
 <be>
 
+<a href="#">Udhav Ramachandran</a>. High School Research Intern (Spring 2021 - Summer 2022). Next B.S. at OSU. <br/>
 <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
-<a href="#">Makenzie Terrell</a> B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
-<a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a> M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
-<a href="#">Priyadharsini Ramamurthy</a> Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
-<a href="#">Devyn Hubbard</a> B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
-<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">Yashwanth Peddaboina</a> M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
-<a href="#">Deepthi Mikkilineni</a> M.S. (CS) Student (Fall 2022).  <br/>
-<a href="#">Sriram Madepalli</a> M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
-<a href="#">Swapna Darsi</a> M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
-<a href="#">Ramya Mikkilineni</a> M.S. (CS) Student (Summer 2022). Next: SDE, Samsung <br/>
-<a href="#">Trae Primm</a> REU Student (Summer 2021). <br/>
-<a href="#">Madison Rushing </a> REU Student (Summer 2021). <br/>
+<a href="#">Makenzie Terrell</a>. B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>. M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
+<a href="#">Priyadharsini Ramamurthy</a>. Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
+<a href="#">Devyn Hubbard</a>. B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">. Yashwanth Peddaboina</a> M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
+<a href="#">Deepthi Mikkilineni</a>. M.S. (CS) Student (Fall 2022).  <br/>
+<a href="#">Sriram Madepalli</a>. M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
+<a href="#">Swapna Darsi</a>. M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
+<a href="#">Ramya Mikkilineni</a>. M.S. (CS) Student (Summer 2022). Next: SDE, Samsung <br/>
+<a href="#">Trae Primm</a>. REU Student (Summer 2021). <br/>
+<a href="#">Madison Rushing</a>. REU Student (Summer 2021). <br/>
 </section>
 
 <section>
