--- a/index.html
+++ b/index.html
@@ -89,139 +89,9 @@ Email: san0028 -at- auburn.edu <br>
   <dd>
     Received the prestigious <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2143150&HistoricalAwards=false">NSF CAREER award</a> to pursue research on multi-modal event understanding!
   </dd>
-  <dt>Spring'22</dt>
-  <dd>
-    One paper on self-distillation for commonsense question answering accepted to ICPR 2022! Congrats to my student Priya on her first paper!
-  </dd>
-  <dt>Spring'22</dt>
-  <dd>
-    One paper on open world action recognition in egocentric videos accepted to Pattern Recognition Letters! Congrats to my student Sanjoy on his second paper!
-  </dd>
-	
-  <dt>Fall'21</dt>
-  <dd>
-    One paper on using building an active vision system for action localization with embodied agents is accepted at WACV 2022! Congrats to my student Shubham on his first paper!
-  </dd>
-
-  <dt>Fall'21</dt>
-  <dd>
-    Book chapter with Ramy Mounir and Dr. Sudeep Sarkar on event understanding to appear in Elsevier Series on Computer Vision and Pattern Recognition!
-  </dd>
-	
-  <dt>Fall'21</dt>
-  <dd>
-    One paper on using transformers for metagenome analysis accepted at the ICDM 2021 Workshops! Preprint coming soon!
-  </dd>
-
-  <dt>Fall'21</dt>
-  <dd>
-    Invited as Associate Editor for <a href="https://www.ieee-ras.org/publications/ra-l">IEEE RA-L!</a>
-  </dd>
-  <dt>Summer'21</dt>
-  <dd>
-	  One paper on <i>Leveraging Pseudo-Imaging for Multi-Modal Metagenome Analysis</i> has been accepted at <a href="https://www.miccai2021.org/en/default.asp">MICCAI 2021</a>!
-  </dd>	
-<!--
-  <dt>Spring'21</dt>
-  <dd>
-    I will be an Area Chair for <a href="http://cvpr2022.thecvf.com/">CVPR 2022</a> and <a href="https://2021.acmmm.org/">ACM Multimedia 2021</a>!
-  </dd>
-  <dt>Spring'21</dt>
-  <dd>
-    One paper on using Adversarial Co-Training for Sim2Real transfer in Metagenome analysis has been accepted at PAKDD 2021! Congrats <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela</a> and <a href="https://www.linkedin.com/in/vennela-indla-a00604130/">Vennela</a>! Preprint coming soon!
-  </dd>
-
-<dt>Fall'20</dt>
-  <dd>
-    Invited as reviewer for CVPR 2021, ICML 2021, CRV 2021, ICCV 2021.
-  </dd>
-  <dt>Fall'20</dt>
-  <dd>
-    One paper on Unsupervised Gaze Prediction in Egocentric Videos with Pattern Theory has been accepted at VISAPP 2021! Initial preprint can be found <a href="https://arxiv.org/abs/2001.11580"> here</a>.
-  </dd>
-  <dt>Fall'20</dt>
-  <dd>
-    One paper on Genome Sequence Classification for Animal Diagnostics with Deep Learning accepted at ICMLA 2020! Preprint can be found <a href="https://arxiv.org/abs/2007.12791">here</a>!
-  </dd>
-  <dt>Fall'20</dt>
-  <dd>
-    One paper on Benchmarking Object Detection models on Resource Constrained Domains accepted at AIPR 2020! Congrats <a href=""> Sanjoy </a> and <a href=""> Nikhil</a>! Preprint coming soon!
-  </dd>
-  <dt>Fall'20</dt>
-  <dd>
-    Organizing the <a href="https://sites.google.com/view/deep-dial2021/">DEEP-DIAL Workshop at AAAI 2021</a> with Biplav Srivastava, Ullas Nambiar and Imed Zitouni! More details to follow!
-  </dd>
-  <dt>Summer'20</dt>
-  <dd>
-    Invited as reviewer for ICLR 2021, AAAI 2021.
-  </dd>
-  
-	<dt>Summer'20</dt>
-  <dd>
-    One paper accepted at ECCV 2020 on Self-supervised Action Localization with Continual Predictive Learning! More details to follow!
-  </dd>
--->
-  <dt>Summer'20</dt>
-  <dd>
-    Awarded NSF Medium Proposal for Self-Supervised Event Understanding in Streaming Videos! It is a collaborative effort with <a href="https://www.cse.usf.edu/~sarkar/SudeepSarkar/About_Me.html"> Dr. Sudeep Sarkar (USF)</a> and <a href="https://ani.stat.fsu.edu/~anuj/"> Dr. Anuj Srivastava (FSU)</a>. More details to follow!
-  </dd>
-
- <!--   
-  <dt>Summer'20</dt>
-  <dd>
-    Named Outstanding Reviewer at CVPR 2020!
-  </dd>
-	<dt>Summer'20</dt>
-  <dd>
-    Invited as reviewer for NeurIPS 2020, WACV 2021, ACCV 2020, ICPR 2020!
-  </dd>
-  <dt>Spring'20</dt>
-  <dd>
-    Organizing a special session on "Machine Learning for Graphs" at <a href="https://www.icmla-conference.org/icmla20/index.html"> ICMLA'20 </a>. <a href="https://sites.google.com/view/ml4graphs/"> Website </a> is now live!
-  </dd>
-  <dt>2019-2020:</dt>
-  <dd>
-    I will be on the Program Committee/Reviewer for WACV 2019, ICCV 2019, AAAI 2020, CVPR 2020, CRV 2020, ECCV 2020.
-  </dd>
-
-
-  <dt>Fall '19:</dt>
-  <dd>
-    One paper accepted at VLSID 2020 on Dissecting CNNs for Implementation on Constrained Platforms.
-  </dd>
- 
-
-  <dt>Fall '19:</dt>
-  <dd>
-    One paper accepted at IFIP IoT on Latent Space modeling for PUF encrypted IoT Node security.
-  </dd>
-  
-  
-  <dt> Summer '19:</dt>
-  <dd>
-    I have accepted a position as Assistant Professor at <a href="http://cs.okstate.edu/">Oklahoma State University</a>. Exciting times ahead!
-  </dd>
-  
-  <dt> Spring '19:</dt>
-  <dd>
-    One paper accepted at ISVLSI on Machine Learning based Attack and Defense for PUF-based IoT Security.
-  </dd>
-  <dt> Spring '19:</dt>
-  <dd>
-    One paper accepted at CVPR on Video Event Segmentation with Self-Supervised Learning.
-  </dd>
-   -->
-  <!-- <dt> Fall '18:</dt>
-  <dd>
-    Paper on Open Domain Activity Interpretation accepted in Quarterly of Applied Mathematics.
-  </dd>
-  <dt> Fall '18:</dt>
-  <dd>
-    One paper accepted at WACV 2019 on Video Activity Interpretation using Commonsense Knowledge.
-  </dd> -->
 </dl>
 
-<!-- <a href="news.html">Older items</a>. -->
+<a href="news.html">More news.</a>.
 </section>
 
 <!-- About Me -->
