--- a/group.html
+++ b/group.html
@@ -22,7 +22,7 @@
  <li><a href="pubs.html">Publications</a></li>
  <li><a href="index.html#teaching">Teaching</a></li>
  <li><a href="group.html">Group</a></li>
- <!-- <li><a href="software.html">Software</a></li> -->
+ <li><a href="news.html">News</a></li>
  <li><a href="files/Saakur_CV.pdf">CV</a></li>
 </ul>
 </nav>
