--- a/group.html
+++ b/group.html
@@ -14,20 +14,8 @@
 <body>
 
 <!-- Header -->
-<header>
-<h2><a href="index.html">Sathyanarayanan N. Aakur</a></h2>
-<nav>
-<ul>
- <li><a href="index.html">Home</a></li>
- <li><a href="pubs.html">Publications</a></li>
- <li><a href="index.html#teaching">Teaching</a></li>
- <li><a href="group.html">Group</a></li>
- <li><a href="news.html">News</a></li>
- <li><a href="files/Saakur_CV.pdf">CV</a></li>
-</ul>
-</nav>
-</header>
-
+<include src="./header.html"></include>
+	
 <!-- Affiliations + Contact -->
 
 <section>
