Update group with vacancies.

--- a/group.html
+++ b/group.html
@@ -14,13 +14,44 @@
 <body>
 
 <!-- Header -->
-<include src="./header.html"></include>
+<header>
+<h2><a href="index.html">Sathyanarayanan N. Aakur</a></h2>
+<nav>
+<ul>
+ <li><a href="index.html">Home</a></li>
+ <li><a href="pubs.html">Publications</a></li>
+ <li><a href="index.html#teaching">Teaching</a></li>
+ <li><a href="group.html">Group</a></li>
+ <li><a href="news.html">News</a></li>
+ <li><a href="files/Saakur_CV.pdf">CV</a></li>
+</ul>
+</nav>
+</header>
 	
 <!-- Affiliations + Contact -->
 
 <section>
 <!-- <center><img src="./files/Lab_Logo.png" align="center" width=500 alt="me"/></center> -->
-<h1  style="text-align: center;"> Open-ended Reasoning and Knowledge Acquisition (ORCA) Lab </h1>
+<h1  style="text-align: center;"> Open-ended Reasoning and Knowledge Acquisition (ORCA) Lab </h1> <br />
+
+We are a research group at the Computer Science and Software Engineering Department at Auburn University. Our aim is to explore algorithms that can function in an open world, i.e., where intelligent agents can learn novel concepts (or knowledge) without explicit supervision.
+
+<br />
+
+<br />
+
+The ORCA Lab develops neuro-symbolic approaches that leverage large-scale symbolic knowledge to guide representation learning with neural networks. Much of our research is inspired by cognitive theories of event and sensori-motor perception. We currently work on research related to open-world event understanding fomr multi-modal data, self-supervised spatio-temporal perception, and active vision for event perception and understanding. Our goal is to develop rich, graph-based representations of events that go beyond what is observed in the scene. This includes unobserved, implicit knowledge that is required to describe the entities in the scene and their relationships with each other.
+
+<br />
+
+<br />
+
+<strong style="color:red">We are looking for students to join our lab! Check out <a href="recruiting.html">Recruiting</a> for more details.</strong>
+
+<br />
+<br />
+
+War Eagle!
 </section>
 
 <section>
@@ -105,7 +136,7 @@
 <a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>. M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
 <a href="#">Priyadharsini Ramamurthy</a>. Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
 <a href="#">Devyn Hubbard</a>. B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
-<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/">. Yashwanth Peddaboina</a> M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
+<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/"> Yashwanth Peddaboina</a>. M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
 <a href="#">Deepthi Mikkilineni</a>. M.S. (CS) Student (Fall 2022).  <br/>
 <a href="#">Sriram Madepalli</a>. M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
 <a href="#">Swapna Darsi</a>. M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
@@ -151,6 +182,7 @@
   </div> -->
 </div>
 </section>
+
 <!-- Footer -->
 <footer>
 <h4>&copy; Sathyanarayanan N. Aakur</h4>
