--- a/header.html
+++ b/header.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<head>
+ <link rel="stylesheet" href="./css/newStyle.css">
+ <link rel="stylesheet" href="./css/newPygments.css"> 
+</head>
 <header>
 <h2><a href="index.html">Sathyanarayanan N. Aakur</a></h2>
 <nav>
@@ -11,3 +16,4 @@
 </ul>
 </nav>
 </header>
+</html>
