--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 [<a href="https://www.linkedin.com/in/sathyanarayanan-aakur-926b35a1"> LinkedIn </a>] [<a href="https://twitter.com/saakur3"> Twitter </a>]
 <br>
+<br><br>
+<strong style="color:red">We are looking for students to join our lab! Check out <a href="recruiting.html">Recruiting</a> for more details.</strong>
+<br>
 </section>
 
 <!-- News -->
@@ -172,6 +175,7 @@ This entails developing approaches that do things such as:
 
 </ul>
 </section>
+
 
 <!-- Footer -->
 <footer>
