Update pubs and CV

--- a/pubs.html
+++ b/pubs.html
@@ -48,14 +48,14 @@ arXiv:2212.00015, 2022. <br>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
 </section>
 
-<!-- 2022 -->
+<!-- 2023 -->
 	<section>
 	<h2 style="text-align: center">2023</h2>	
 	<ul> 
 		<li>
-			 <a href="#">ProtoKD: Learning from Extremely Scarce Data for Parasite Ova Recognition.</a><br>
+			 <a href="https://arxiv.org/abs/2309.10210">ProtoKD: Learning from Extremely Scarce Data for Parasite Ova Recognition.</a><br>
 			 Shubham Trehan, Udhav Ramachandran, Ruth Scimeca, Sathyanarayanan N. Aakur <br>
-			 IEEE International Conference on Machine Learning and Applications (ICMLA), 2023. (Oral) . [Preprint Coming Soon!] <br>
+			 IEEE International Conference on Machine Learning and Applications (ICMLA), 2023. (Oral) . <br>
 		 </li>
 
 		<li>
