Update team and recruiting info

--- a/group.html
+++ b/group.html
@@ -42,6 +42,7 @@ We are a research group at the Computer Science and Software Engineering Departm
 
 The ORCA Lab develops neuro-symbolic approaches that leverage large-scale symbolic knowledge to guide representation learning with neural networks. Much of our research is inspired by cognitive theories of event and sensori-motor perception. We currently work on research related to open-world event understanding fomr multi-modal data, self-supervised spatio-temporal perception, and active vision for event perception and understanding. Our goal is to develop rich, graph-based representations of events that go beyond what is observed in the scene. This includes unobserved, implicit knowledge that is required to describe the entities in the scene and their relationships with each other.
 
+<!-- 
 <br />
 
 <br />
@@ -50,8 +51,9 @@ The ORCA Lab develops neuro-symbolic approaches that leverage large-scale symbol
 
 <br />
 <br />
-
 War Eagle!
+ -->
+
 </section>
 
 <section>
@@ -93,9 +95,27 @@ War Eagle!
  <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
+      <a href="#">Disharee Bhowmick</a>
+      <br />
+      Ph.D. Student <br/>
+      (From Spring 2024)
+    </p>
+  </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Zhou Chen</a>
+      <br />
+      Ph.D. Student <br/>
+      (From Fall 2024)
+    </p>
+  </div>  
+ <div class="person">
+    <img src="./files/blank_w.jpg" alt="thumb" />
+    <p>
       <a href="#">Shengfang Ma</a>
       <br />
-      M.S. (CS) Student <br/>
+      M.S. (CS) Student (OSU) <br/>
       (Fall 2021 - Present)
     </p>
   </div>  
@@ -105,17 +125,25 @@ War Eagle!
     <p>
       <a href="#">Venkata Ragavendra Vavilthota</a>
       <br />
-      M.S. (CS) Student <br/>
+      M.S. (CS) Student (OSU) <br/>
       (Fall 2022 - Present)
     </p>
   </div>  
-	
+	<div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Carson Bulgin</a>
+      <br />
+      B.Eng. Student <br/>
+      (Fall 2023 - Present)
+    </p>
+  </div>  
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Udhav Ramachandran</a>
       <br />
-      B.S. Student <br/>
+      B.S. Student (OSU) <br/>
       (Fall 2022 - Present)
     </p>
   </div>  
