--- a/recruiting.html
+++ b/recruiting.html
@@ -41,9 +41,11 @@ If you are an undergraduate student already at Auburn University and are interes
 </section>
 
 <section>
-<!-- <center><img src="./files/Lab_Logo.png" align="center" width=500 alt="me"/></center> -->
-<h1  style="text-align: center;"> Open Ph.D. Student Positions</h1> <br />
 
+
+<h1  style="text-align: center;"> Open Ph.D. Student Positions</h1> <br />
+All positions are currently filled. We are not looking for any Ph.D. students at this time. 
+<!--
 We are always looking for motivated PhD students, especially in embodied active perception, multimodal event understanding, and computer vision applications for agriculture and medicine. 
 
 Several of our current and former students have published at top venues in computer vision and machine learning such as CVPR, ECCV, WACV, MICCAI, etc. 
@@ -65,7 +67,7 @@ If you are interested in applying for a Ph.D. position with me, drop me an email
 
 <br />
 <br />
-
+ -->
 </section>
 
 <section>
