--- a/group.html
+++ b/group.html
@@ -91,14 +91,22 @@ War Eagle!
       (Fall 2020 - Present)
     </p>
   </div>
-
+ <div class="person">
+    <img src="./files/blank.jpg" alt="thumb" />
+    <p>
+      <a href="#">Shanmukha Vellamchetti</a>
+      <br />
+      Ph.D. Student <br/>
+      (Spring 2024 - Present)
+    </p>
+  </div>  
  <div class="person">
     <img src="./files/blank_w.jpg" alt="thumb" />
     <p>
       <a href="#">Disharee Bhowmick</a>
       <br />
       Ph.D. Student <br/>
-      (From Spring 2024)
+      (Spring 2024 - Present)
     </p>
   </div>  
   <div class="person">
@@ -120,19 +128,19 @@ War Eagle!
     </p>
   </div>  
 
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="#">Venkata Ragavendra Vavilthota</a>
-      <br />
-      M.S. (CS) Student (OSU) <br/>
-      (Fall 2022 - Present)
-    </p>
-  </div>  
 	<div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Carson Bulgin</a>
+      <br />
+      B.Eng. Student (AU) <br/>
+      (Fall 2023 - Present)
+    </p>
+  </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Elijah Parker</a>
       <br />
       B.Eng. Student <br/>
       (Fall 2023 - Present)
@@ -158,6 +166,7 @@ War Eagle!
 </center>
 <be>
 
+<a href="#">Venkata Ragavendra Vavilthota</a>. M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). <br/>
 <a href="#">Udhav Ramachandran</a>. High School Research Intern (Spring 2021 - Summer 2022). Next B.S. at OSU. <br/>
 <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
 <a href="#">Makenzie Terrell</a>. B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
