--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+<dt>Spring'24</dt>
+  <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! Preprint to follow.</dd>
 <dt>Fall'23</dt>
 	<dd>One paper accepted for Oral presentation at <a href="https://www.icmla-conference.org/icmla23/">IEEE ICMLA 2023</a>! Congrats to Shubham and my undergrad student Udhav on their second and first papers, respectively!</dd>
 <dt>Fall'23</dt>
