--- a/pubs.html
+++ b/pubs.html
@@ -47,6 +47,17 @@ arXiv:2212.00015, 2022. <br>
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
 </section>
+<!-- 2024 -->
+<section>
+	<h2 style="text-align: center">2024</h2>	
+	<ul> 
+		<li>
+			 <a href="#">TEPI: Taxonomy-aware Embedding and Pseudo- Imaging for Scarcely-labeled Zero-shot Genome Classification</a><br>
+			 Sathyanarayanan N. Aakur, Vishalini R. Laguduva, Priyadharsini Ramamurthy, Akhilesh Ramachandran. <br>
+			 IEEE Journal of Biomedical and Health Informatics [Preprint coming soon!]. <br>
+		 </li>
+	</ul>
+</section>
 
 <!-- 2023 -->
 	<section>
