--- a/group.html
+++ b/group.html
@@ -92,7 +92,7 @@ War Eagle!
     </p>
   </div>
  <div class="person">
-    <img src="./files/blank.jpg" alt="thumb" />
+    <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Shanmukha Vellamchetti</a>
       <br />
