Update group and teaching

--- a/group.html
+++ b/group.html
@@ -114,8 +114,8 @@ War Eagle!
     <p>
       <a href="#">Zhou Chen</a>
       <br />
-      Ph.D. Student <br/>
-      (From Fall 2024)
+      M.S. Student <br/>
+      (Ph.D. From Fall 2024)
     </p>
   </div>  
  <div class="person">
