--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@ This entails developing approaches that do things such as:
 <a name="teaching"></a>
 <h2 style="text-align: center">Teaching</h2>
 <ul>
+ <li class="packed">Spring 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5630/6630 Machine Learning</a>. Auburn University.</li>
  <li class="packed">Fall 2023: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
  <li class="packed">Fall 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a>. Oklahoma State University.</li>
  <li class="packed">Spring 2020, 2021, 2022, 2023: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>. Oklahoma State University.</li>
