--- a/index.html
+++ b/index.html
@@ -160,6 +160,7 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Talks</h2>
 <br/>
 <ul>
+<li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. WADLA 3.0, IIT-Sri City. Fall 2023 </li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. 7th Summer School on AI, IIT-Hyderabad. Summer 2023 </li>
 <li class="packed">Representation Learning for Metagenomics: An Explorative Study. INTERACT Symposium on One Health and One Medicine. Summer 2023</li>
 <li class="packed">Towards Open World Event Understanding with Neuro Symbolic Reasoning. The University of Iowa. Spring 2023 </li>
