--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
-  <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! Preprint to follow.</dd>
+  <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! <a href="https://arxiv.org/abs/2401.13219">Preprint</a> now online!</dd>
 <dt>Fall'23</dt>
 	<dd>One paper accepted for Oral presentation at <a href="https://www.icmla-conference.org/icmla23/">IEEE ICMLA 2023</a>! Congrats to Shubham and my undergrad student Udhav on their second and first papers, respectively!</dd>
 <dt>Fall'23</dt>
