--- a/group.html
+++ b/group.html
@@ -166,7 +166,7 @@ War Eagle!
 </center>
 <be>
 
-<a href="#">Venkata Ragavendra Vavilthota</a>. M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). <br/>
+<a href="#">Venkata Ragavendra Vavilthota</a>. M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). Next: Data Engineer, Wayfair. <br/>
 <a href="#">Udhav Ramachandran</a>. High School Research Intern (Spring 2021 - Summer 2022). Next B.S. at OSU. <br/>
 <a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
 <a href="#">Makenzie Terrell</a>. B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
