--- a/pubs.html
+++ b/pubs.html
@@ -52,9 +52,9 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul> 
 		<li>
-			 <a href="https://arxiv.org/abs/2401.13219">TEPI: Taxonomy-aware Embedding and Pseudo- Imaging for Scarcely-labeled Zero-shot Genome Classification</a><br>
+			 <a href="https://ieeexplore.ieee.org/document/10415102">TEPI: Taxonomy-aware Embedding and Pseudo-Imaging for Scarcely-labeled Zero-shot Genome Classification</a><br>
 			 Sathyanarayanan N. Aakur, Vishalini R. Laguduva, Priyadharsini Ramamurthy, Akhilesh Ramachandran. <br>
-			 IEEE Journal of Biomedical and Health Informatics. <br>
+			 IEEE Journal of Biomedical and Health Informatics. <a href="https://arxiv.org/abs/2401.13219"> [Preprint] </a> <br>
 		 </li>
 	</ul>
 </section>
