Update ISBI paper

--- a/pubs.html
+++ b/pubs.html
@@ -50,11 +50,16 @@ arXiv:2212.00015, 2022. <br>
 <!-- 2024 -->
 <section>
 	<h2 style="text-align: center">2024</h2>	
-	<ul> 
+	<ul>
 		<li>
-			 <a href="https://arxiv.org/abs/2401.13219">TEPI: Taxonomy-aware Embedding and Pseudo- Imaging for Scarcely-labeled Zero-shot Genome Classification</a><br>
+			 <a href="https://arxiv.org/abs/2308.06869">Shape-Graph Matching Network (SGM-net): Registration for Statistical Shape Analysis</a><br>
+			 Shenyuan Liang, Mauricio Pamplona Segundo, Sathyanarayanan N. Aakur, Sudeep Sarkar, Anuj Srivastava <br>
+			 IEEE International Symposium on Biomedical Imaging (ISBI) 2024. <br>
+		 </li> 
+		<li>
+			 <a href="https://ieeexplore.ieee.org/abstract/document/10415102">TEPI: Taxonomy-aware Embedding and Pseudo- Imaging for Scarcely-labeled Zero-shot Genome Classification</a><br>
 			 Sathyanarayanan N. Aakur, Vishalini R. Laguduva, Priyadharsini Ramamurthy, Akhilesh Ramachandran. <br>
-			 IEEE Journal of Biomedical and Health Informatics. <br>
+			 IEEE Journal of Biomedical and Health Informatics. <a href="https://arxiv.org/abs/2401.13219">[Preprint]</a> <br>
 		 </li>
 	</ul>
 </section>
