--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
+  <dd>One paper on Shape Graph Matching accepted into <a href="https://biomedicalimaging.org/2024//">IEEE International Symposium on Biomedical Imaging (ISBI)</a>! <a href="https://arxiv.org/abs/2308.06869">Preprint</a> now online! Congrats <a href="https://www.linkedin.com/in/shenyuan-liang-14571819a/">Shenyuan (FSU)</a> on his first paper!</dd>
+<dt>Spring'24</dt>
   <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! <a href="https://arxiv.org/abs/2401.13219">Preprint</a> now online!</dd>
 <dt>Fall'23</dt>
 	<dd>One paper accepted for Oral presentation at <a href="https://www.icmla-conference.org/icmla23/">IEEE ICMLA 2023</a>! Congrats to Shubham and my undergrad student Udhav on their second and first papers, respectively!</dd>
