--- a/group.html
+++ b/group.html
@@ -42,17 +42,17 @@ We are a research group at the Computer Science and Software Engineering Departm
 
 The ORCA Lab develops neuro-symbolic approaches that leverage large-scale symbolic knowledge to guide representation learning with neural networks. Much of our research is inspired by cognitive theories of event and sensori-motor perception. We currently work on research related to open-world event understanding fomr multi-modal data, self-supervised spatio-temporal perception, and active vision for event perception and understanding. Our goal is to develop rich, graph-based representations of events that go beyond what is observed in the scene. This includes unobserved, implicit knowledge that is required to describe the entities in the scene and their relationships with each other.
 
-<!-- 
-<br />
 
 <br />
 
-<strong style="color:red">We are looking for students to join our lab! Check out <a href="recruiting.html">Recruiting</a> for more details.</strong>
+<br />
+
+<strong>Check out <a href="recruiting.html">Recruiting</a> for any open positions.</strong>
 
 <br />
 <br />
 War Eagle!
- -->
+
 
 </section>
 
