--- a/group.html
+++ b/group.html
@@ -92,9 +92,9 @@ War Eagle!
     </p>
   </div>
  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
+    <img src="./files/shanmukha.jpeg" alt="thumb" />
     <p>
-      <a href="#">Shanmukha Vellamchetti</a>
+      <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamchetti</a>
       <br />
       Ph.D. Student <br/>
       (Spring 2024 - Present)
