--- a/group.html
+++ b/group.html
@@ -110,7 +110,7 @@ War Eagle!
     </p>
   </div>  
   <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
+    <img src="./files/Zhou_Chen.jpeg" alt="thumb" />
     <p>
       <a href="#">Zhou Chen</a>
       <br />
