--- a/pubs.html
+++ b/pubs.html
@@ -20,7 +20,7 @@
  <li><a href="index.html">Home</a></li>
  <li><a href="pubs.html">Publications</a></li>
  <li><a href="index.html#teaching">Teaching</a></li>
- <li><a href="index.html#group">Group</a></li>
+ <li><a href="group.html">Group</a></li>
  <li><a href="news.html">News</a></li>
  <li><a href="files/Saakur_CV.pdf">CV</a></li>
 </ul>
