--- a/group.html
+++ b/group.html
@@ -138,9 +138,9 @@ War Eagle!
     </p>
   </div>  
   <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
+    <img src="./files/elijah.jpeg" alt="thumb" />
     <p>
-      <a href="#">Elijah Parker</a>
+      <a href="https://elijahparker000.com/">Elijah Parker</a>
       <br />
       B.Eng. Student <br/>
       (Fall 2023 - Present)
