--- a/group.html
+++ b/group.html
@@ -101,7 +101,7 @@ War Eagle!
     </p>
   </div>  
  <div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
+    <img src="./files/Disharee.jpeg" alt="thumb" />
     <p>
       <a href="#">Disharee Bhowmick</a>
       <br />
