--- a/news.html
+++ b/news.html
@@ -36,6 +36,8 @@
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
+  <dd>Congrats to my student <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
+<dt>Spring'24</dt>
   <dd>One paper on Shape Graph Matching accepted into <a href="https://biomedicalimaging.org/2024//">IEEE International Symposium on Biomedical Imaging (ISBI)</a>! <a href="https://arxiv.org/abs/2308.06869">Preprint</a> now online! Congrats <a href="https://www.linkedin.com/in/shenyuan-liang-14571819a/">Shenyuan (FSU)</a> on his first paper!</dd>
 <dt>Spring'24</dt>
   <dd>One paper on zero-shot genome classification accepted in <a href="https://www.embs.org/jbhi/">IEEE Journal of Biomedical and Health Informatics</a>! Preprint to follow.</dd>
