--- a/group.html
+++ b/group.html
@@ -131,7 +131,7 @@ War Eagle!
 	<div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
-      <a href="#">Carson Bulgin</a>
+      <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>
       <br />
       B.Eng. Student (AU) <br/>
       (Fall 2023 - Present)
