--- a/pubs.html
+++ b/pubs.html
@@ -52,6 +52,11 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
 		<li>
+			<a href="#">Pipelined Structure in the Classification of Skin Lesions based on Alexnet CNN and SVM Model with Bi-sectional Texture Features.</a><br>
+			V S S Bala Tripura Sathvika, Nagilla Anmisha, Vada Thanmayi, Suchetha M, Edwin Dhas D, Sehastrajit S, Sathyanarayanan N Aakur. <br>
+			IEEE Access. <br>
+		</li>
+		<li>
 			 <a href="https://arxiv.org/abs/2308.06869">Shape-Graph Matching Network (SGM-net): Registration for Statistical Shape Analysis</a><br>
 			 Shenyuan Liang, Mauricio Pamplona Segundo, Sathyanarayanan N. Aakur, Sudeep Sarkar, Anuj Srivastava <br>
 			 IEEE International Symposium on Biomedical Imaging (ISBI) 2024. <br>
