--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
+  <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
+<dt>Spring'24</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
 <dt>Spring'24</dt>
   <dd>One paper on Shape Graph Matching accepted into <a href="https://biomedicalimaging.org/2024//">IEEE International Symposium on Biomedical Imaging (ISBI)</a>! <a href="https://arxiv.org/abs/2308.06869">Preprint</a> now online! Congrats <a href="https://www.linkedin.com/in/shenyuan-liang-14571819a/">Shenyuan (FSU)</a> on his first paper!</dd>
@@ -94,10 +96,6 @@ Email: san0028 -at- auburn.edu <br>
   <dt>Summer'22</dt>
   <dd>
     Two papers accepted at ECCV 2022! 
-  </dd>
-  <dt>Spring'22</dt>
-  <dd>
-    Received the prestigious <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2143150&HistoricalAwards=false">NSF CAREER award</a> to pursue research on multi-modal event understanding!
   </dd>
 </dl>
 
