--- a/group.html
+++ b/group.html
@@ -68,7 +68,7 @@ War Eagle!
     <p>
       <a href="https://saakur.github.io/">Sathyanarayanan Aakur</a>
       <br />
-      Assistant Professor
+      PI, Assistant Professor
     </p>
   </div>
 
@@ -118,22 +118,13 @@ War Eagle!
       (Ph.D. From Fall 2024)
     </p>
   </div>  
- <div class="person">
-    <img src="./files/blank_w.jpg" alt="thumb" />
-    <p>
-      <a href="#">Shengfang Ma</a>
-      <br />
-      M.S. (CS) Student (OSU) <br/>
-      (Fall 2021 - Present)
-    </p>
-  </div>  
 
 	<div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>
       <br />
-      B.Eng. Student (AU) <br/>
+      B.Eng. Student <br/>
       (Fall 2023 - Present)
     </p>
   </div>  
@@ -144,6 +135,15 @@ War Eagle!
       <br />
       B.Eng. Student <br/>
       (Fall 2023 - Present)
+    </p>
+  </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Joe Lin</a>
+      <br />
+      B.Eng. Student <br/>
+      (Spring 2024 - Present)
     </p>
   </div>  
   <div class="person">
@@ -166,20 +166,22 @@ War Eagle!
 </center>
 <be>
 
-<a href="#">Venkata Ragavendra Vavilthota</a>. M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). Next: Data Engineer, Wayfair. <br/>
+<a href="#">Chi-Jui Wu</a>. AU, M.S. C.S. (Spring 2024). <br/>
+<a href="#">Shengfang Ma</a>. OSU, M.S. C.S. (Thesis) (Summer 2021 - Spring 2024). <br/>
+<a href="#">Venkata Ragavendra Vavilthota</a>. OSU, M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). Next: Data Engineer, Wayfair. <br/>
 <a href="#">Udhav Ramachandran</a>. High School Research Intern (Spring 2021 - Summer 2022). Next B.S. at OSU. <br/>
-<a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
-<a href="#">Makenzie Terrell</a>. B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
-<a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>. M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
-<a href="#">Priyadharsini Ramamurthy</a>. Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
-<a href="#">Devyn Hubbard</a>. B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
-<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/"> Yashwanth Peddaboina</a>. M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
-<a href="#">Deepthi Mikkilineni</a>. M.S. (CS) Student (Fall 2022).  <br/>
-<a href="#">Sriram Madepalli</a>. M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
-<a href="#">Swapna Darsi</a>. M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
-<a href="#">Ramya Mikkilineni</a>. M.S. (CS) Student (Summer 2022). Next: SDE, Samsung <br/>
-<a href="#">Trae Primm</a>. REU Student (Summer 2021). <br/>
-<a href="#">Madison Rushing</a>. REU Student (Summer 2021). <br/>
+<a href="https://nikhilgunti.github.io/">Nikhil Gunti</a>. OSU, Master's Student (BA&DS) (Fall 2019 - Spring 2021). Next: Data Scientist, Concat Systems. <br />
+<a href="#">Makenzie Terrell</a>. OSU, B.S. (CS) Student (Fall 2020 - Fall 2021). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/vineela-indla-22644219b/">Vineela Indla</a>. OSU, M.S. (CS) Student (Fall 2020 - Fall 2021). Next: SDE, Amazon. <br />
+<a href="#">Priyadharsini Ramamurthy</a>. OSU, Ph.D. Student (Fall 2020 - Summer 2023). Next: Ph.D. Student at OSU. <br />
+<a href="#">Devyn Hubbard</a>. OSU, B.S. (CS) Student (Spring 2022 - Spring 2023). Next: B.S. at OSU. <br />
+<a href="https://www.linkedin.com/in/yashwanth-peddaboina-8a8b1aa3/"> Yashwanth Peddaboina</a>. OSU, M.S. (CS) Student (Fall 2021 - Spring 2022). Next: SDE at Amazon.<br />
+<a href="#">Deepthi Mikkilineni</a>. OSU, M.S. (CS) Student (Fall 2022).  <br/>
+<a href="#">Sriram Madepalli</a>. OSU, M.S. (CS) Student (Summer 2022). Next: SDE, Amazon.  <br/>
+<a href="#">Swapna Darsi</a>. OSU, M.S. (CS) Student (Summer 2022). Next: Quality Assurance Analyst, Atlantic Casualty Insurance Co.  <br/>
+<a href="#">Ramya Mikkilineni</a>. OSU, M.S. (CS) Student (Summer 2022). Next: SDE, Samsung <br/>
+<a href="#">Trae Primm</a>. OSU, REU Student (Summer 2021). <br/>
+<a href="#">Madison Rushing</a>. OSU, REU Student (Summer 2021). <br/>
 </section>
 
 <section>
