--- a/pubs.html
+++ b/pubs.html
@@ -52,7 +52,7 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2024</h2>	
 	<ul>
 		<li>
-			<a href="#">Pipelined Structure in the Classification of Skin Lesions based on Alexnet CNN and SVM Model with Bi-sectional Texture Features.</a><br>
+			<a href="https://ieeexplore.ieee.org/document/10496674">Pipelined Structure in the Classification of Skin Lesions based on Alexnet CNN and SVM Model with Bi-sectional Texture Features.</a><br>
 			V S S Bala Tripura Sathvika, Nagilla Anmisha, Vada Thanmayi, Suchetha M, Edwin Dhas D, Sehastrajit S, Sathyanarayanan N Aakur. <br>
 			IEEE Access. <br>
 		</li>
