--- a/group.html
+++ b/group.html
@@ -63,6 +63,7 @@ War Eagle!
 <br>
 
 <div class="people">
+ <!--  
   <div class="person">
     <img src="./files/sathya.jpg" alt="thumb" />
     <p>
@@ -71,7 +72,7 @@ War Eagle!
       PI, Assistant Professor
     </p>
   </div>
-
+ -->
   <div class="person">
     <img src="./files/Sanjoy1.png" alt="thumb" />
     <p>
@@ -114,11 +115,19 @@ War Eagle!
     <p>
       <a href="#">Zhou Chen</a>
       <br />
-      M.S. Student <br/>
-      (Ph.D. From Fall 2024)
+      Ph.D. Student <br/>
+      (Summer 2024 - Present)
     </p>
   </div>  
-
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="https://www.linkedin.com/in/khandelwaldevesh/">Devesh Khandelwal</a>
+      <br />
+      Ph.D. Student <br/>
+      (Summer 2024 - Present)
+    </p>
+  </div>  
 	<div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
@@ -129,18 +138,18 @@ War Eagle!
     </p>
   </div>  
   <div class="person">
-    <img src="./files/elijah.jpeg" alt="thumb" />
+    <img src="./files/blank.jpeg" alt="thumb" />
     <p>
-      <a href="https://elijahparker000.com/">Elijah Parker</a>
+      <a href="#">Joe Lin</a>
       <br />
       B.Eng. Student <br/>
-      (Fall 2023 - Present)
+      (Spring 2024 - Present)
     </p>
   </div>  
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
-      <a href="#">Joe Lin</a>
+      <a href="#">John Lieb</a>
       <br />
       B.Eng. Student <br/>
       (Spring 2024 - Present)
@@ -166,6 +175,8 @@ War Eagle!
 </center>
 <be>
 
+<a href="#">Zhou Chen</a>. AU, M.S. C.S. (Fall 2023 - Spring 2024). Next: Ph.D. at Auburn University.<br/>
+<a href="https://elijahparker000.com/">Elijah Parker</a>. AU, B.S C.E. (Fall 2023 - Spring 2024). Next: Engineer at Johns Hopkins Applied Physics Laboratory.<br/>
 <a href="#">Chi-Jui Wu</a>. AU, M.S. C.S. (Spring 2024). <br/>
 <a href="#">Shengfang Ma</a>. OSU, M.S. C.S. (Thesis) (Summer 2021 - Spring 2024). <br/>
 <a href="#">Venkata Ragavendra Vavilthota</a>. OSU, M.S. C.S. (Thesis) (Fall 2022 - Fall 2023). Next: Data Engineer, Wayfair. <br/>
