--- a/group.html
+++ b/group.html
@@ -197,6 +197,23 @@ War Eagle!
 
 <section>
   <center>
+<h1 id="people">Collaborators</h1>
+</center>
+<be>
+  <br/>
+<a href="https://www.usf.edu/engineering/cse/people/sarkar-sudeep.aspx">Dr. Sudeep Sarkar</a>. University of South Florida <br/>
+<a href="https://anujsrivastava.com/">Dr. Anuj Srivastava</a>. Florida State University <br/>
+<a href="https://experts.okstate.edu/rakhile">Dr. Akhilesh Ramachandran</a>. OADDL, Oklahoma State University <br/>
+<a href="http://raghavam.github.io/">Dr. Raghava Mutharaju</a>. IIIT-Delhi, India<br/>
+<a href="https://sites.google.com/site/biplavsrivastava/">Dr. Biplav Srivastava</a>. University of South Carolina <br/>
+<a href="https://chennai.vit.ac.in/member/dr-suchetha-m/">Dr. M. Suchetha</a>. Vellore Institute of Technology, India <br/>
+<a href="https://experts.okstate.edu/sunil.more">Dr. Sunil More</a>. Oklahoma State University <br/>
+<a href="https://experts.okstate.edu/ruth.scimeca">Dr. Ruth Scimeca</a>. Oklahoma State University <br/>
+<a href="https://arunkumar.okstate.edu/">Dr. Arunkumar Bagavathi</a>. Oklahoma State University <br/>
+</be>
+</section>
+<section>
+  <center>
     <h1>Current Projects</h1><br>
   </center>
   <div class="people">
