--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
+  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a>!</dd>
+<dt>Spring'24</dt>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
@@ -74,28 +76,6 @@ Email: san0028 -at- auburn.edu <br>
   <dt>Summer'23</dt>
   <dd>
 	  Our paper, with Dr. Sudeep Sarkar (USF), on neuro-symbolic knowledge distillation for commonsense NLI has been accepted into the prestigious IEEE Transactions on Pattern Analysis and Machine Intelligence! Preprint to come soon!
-  </dd>
-  <dt>Spring'23</dt>
-  <dd>
-	  Serving as Area Chair for <a href="https://nips.cc/">NeurIPS 2023</a>!
-  </dd>
-  <dt>Spring'23</dt>
-  <dd>
-	  One paper on Scene Graph Generation accepted at <a href="">CVPR 2023</a>. Congrats to Sanjoy on his first CVPR paper and third overall. Preprint <a href="https://arxiv.org/abs/2211.16636"> here </a>
-  </dd>
-  <dt>Spring'23</dt>
-  <dd>
-	  Received funding from USDA for multimodal time series classification for stress detection in precision agriculture! 
-  </dd>
-
-  <dt>Fall'22</dt>
-  <dd>
-	  Serving as Area Chair for <a href="https://cvpr2023.thecvf.com/"> CVPR 2023 </a>! 
-  </dd>
-
-  <dt>Summer'22</dt>
-  <dd>
-    Two papers accepted at ECCV 2022! 
   </dd>
 </dl>
 
@@ -162,6 +142,7 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Talks</h2>
 <br/>
 <ul>
+<li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. DMS Statistics and Data Science Seminar, Auburn University. Spring 2024.</li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. WADLA 3.0, IIT-Sri City. Fall 2023 </li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. 7th Summer School on AI, IIT-Hyderabad. Summer 2023 </li>
 <li class="packed">Representation Learning for Metagenomics: An Explorative Study. INTERACT Symposium on One Health and One Medicine. Summer 2023</li>
