--- a/news.html
+++ b/news.html
@@ -36,6 +36,8 @@
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
+  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a>!</dd>
+<dt>Spring'24</dt>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
