update with news

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 <img src="https://saakur.github.io/files/sathya.jpg" align="left" width=200 style="margin-top:5px; margin-right:81px" alt="me"/>
 <br>
 Sathyanarayanan N. Aakur <br>
-<br>
+<i>IEEE Senior Member </i> <br><br>
 Assistant Professor <br>
+
 <a href="https://eng.auburn.edu/csse/">Department of Computer Science and Software Engineering</a> <br>
 <a href="http://auburn.edu/">Auburn University</a> <br>
 <br>
@@ -54,7 +55,9 @@ Email: san0028 -at- auburn.edu <br>
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
-  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a>!</dd>
+  <dd>Elevated as IEEE Senior Member!</dd>
+<dt>Spring'24</dt>
+  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a> and <a href="https://neurips.cc/">NeurIPS 2024</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
@@ -73,10 +76,7 @@ Email: san0028 -at- auburn.edu <br>
 	<dd>Moved to the <a href="https://eng.auburn.edu/csse/">CSSE Department</a> at <a href="http://auburn.edu/">Auburn University!</a></dd>
   <dt>Summer'23</dt>
 	<dd>Serving as Senior Program Committee Member for <a href="https://cods-comad.in/index.php">CODS-COMAD 2024</a></dd>
-  <dt>Summer'23</dt>
-  <dd>
-	  Our paper, with Dr. Sudeep Sarkar (USF), on neuro-symbolic knowledge distillation for commonsense NLI has been accepted into the prestigious IEEE Transactions on Pattern Analysis and Machine Intelligence! Preprint to come soon!
-  </dd>
+
 </dl>
 
 <a href="news.html">More news.</a>.
