--- a/news.html
+++ b/news.html
@@ -36,7 +36,9 @@
 <br>
 <dl class="dl-horizontal">
 <dt>Spring'24</dt>
-  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a>!</dd>
+  <dd>Elevated as IEEE Senior Member!</dd>
+<dt>Spring'24</dt>
+  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a> and <a href="https://neurips.cc/">NeurIPS 2024</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
