--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Email: san0028 -at- auburn.edu <br>
 <dt>Spring'24</dt>
   <dd>Elevated as IEEE Senior Member!</dd>
 <dt>Spring'24</dt>
-  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a> and <a href="https://neurips.cc/">NeurIPS 2024</a>!</dd>
+  <dd>Invited as Area Chair for <a href="https://bmvc2024.org/">BMVC 2024</a> and <a href="https://neurips.cc/">NeurIPS 2024 </a>, and SPC for <a href="https://cods-comad.in/">CODS-COMAD 2024</a>!</dd>
 <dt>Spring'24</dt>
   <dd>Invited as Associate Editor for <a href="https://www.sciencedirect.com/journal/pattern-recognition">Pattern Recognition</a>!</dd>
 <dt>Spring'24</dt>
